--- a/moviefrontend/src/index.css
+++ b/moviefrontend/src/index.css
@@ -46,6 +46,20 @@ input[type=number] {
     transform: scaleY(1) 
   }
 }
+
+
+.custom-scroll-bar::-webkit-scrollbar {
+  width: 2px;               /* width of the entire scrollbar */
+  height: 7px;
+}
+.custom-scroll-bar::-webkit-scrollbar-track {
+  background: #a1a1a1;        /* color of the tracking area */
+}
+.custom-scroll-bar::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(211, 14, 14);    /* color of the scroll thumb */
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
