--- a/moviefrontend/src/index.css
+++ b/moviefrontend/src/index.css
@@ -60,6 +60,66 @@ input[type=number] {
 }
 
 
+.slide-in-from-right{
+  animation: slideInFromRight 0.5s ease-in
+}
+
+.slide-out-to-left{
+  animation: slideOutToLeft 0.5s ease-in
+}
+
+.slide-in-from-left{
+  animation: slideInFromLeft 0.5s ease-in
+}
+.slide-out-to-right{
+  animation: slideOutToRight 0.5s ease-in
+}
+
+
+@keyframes slideInFromRight {
+  from{
+    transform: translateX(100%)
+  }
+  to{
+    transform: translateX((0%))
+  }
+  
+}
+
+@keyframes slideOutToLeft {
+  from{
+    transform: translateX(0%)
+  }
+  to{
+    transform: translateX((-100%))
+  }
+  
+}
+
+
+@keyframes slideInFromLeft {
+  from{
+    transform: translateX(-100%)
+  }
+  to{
+    transform: translateX((0%))
+  }
+  
+}
+
+@keyframes slideOutToRight {
+  from{
+    transform: translateX(0%)
+  }
+  to{
+    transform: translateX((100%))
+  }
+  
+}
+
+/* for our slideShow */
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
